Add basic Swagger routes
